--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 </span>
 
                 <span id="nav-avatar-btn" class="nav__avatar-btn">
-                    <img src="images/naru.jpeg" alt="avatar">
+                    <img  class="avatar" src="images/naru.jpeg" alt="avatar">
                     <i class="fa fa-caret-down"></i>
 
                     <!-- new-btn modal -->
                     <div id="avatar-btn-modal" class="fade-in modal">        
                         <i class="fa fa-caret-up"></i>
                         <ul class="modal-items">
-                            <span class="modal__username">Signed in as </span> <p>NARUDESIGNS</p> <hr>
-                            <p class="modal-items__status">Hi, want to get amazed?</p> <hr>
+                            <span class="modal__username">Signed in as </span> <p class="username">NARUDESIGNS</p> <hr>
+                            <p class="status modal-items__status">Oh my goodness! this rocks!</p> <hr>
                             <li>Your profile</li>
                             <li>Your repositories</li>
                             <li>Your projects</li>
@@ -92,8 +92,8 @@
                 <li class="nav-items__explore">Explore</li> <hr>
                 <li class="nav-items__settings">Settings</li> <hr>
                 <li class="main-nav-user mobile-nav-user">
-                    <img src="images/naru.jpeg" alt="user-avatar">
-                    <p><strong>NARUDESIGNS</strong></p> 
+                    <img class="avatar" src="images/naru.jpeg" alt="user-avatar">
+                    <p class="username"><strong>NARUDESIGNS</strong></p> 
                 </li> <hr>
                 <li class="nav-items__settings">
                     <span class="iconify logout-icon" data-icon="octicon:sign-out-16" data-inline="false"></span>
@@ -106,8 +106,8 @@
         <nav id="main-nav" class="main-nav">
             <!-- Fading user avatar | username -->
             <div id="main-nav-avatar" class="fade-in main-nav-user">
-                <img src="images/naru.jpeg" alt="user-avatar">
-                <p><strong>NARUDESIGNS</strong></p>
+                <img class="avatar" src="images/naru.jpeg" alt="user-avatar">
+                <p class="username"><strong>NARUDESIGNS</strong></p>
             </div>
             
             <ul class="main-nav__items-container">
@@ -139,39 +139,40 @@
             <!-- Profile Details -->
             <div class="profile">
                 <div class="profile-photo">
-                    <img src="images/naru-bg.jpeg" alt="profile-photo">
+                    <img  class="avatar" src="images/naru-bg.jpeg" alt="profile-photo">
+                    <div class="tooltip"> Change your avatar <i class="tooltip-caret fa fa-caret-up"></i></div>
                 </div>
                 <div class="profile-info">
-                    <h1 class="profile__name">Paul Ibeabuchi</h1>
-                    <p class="profile__username">NARUDESIGNS</p>                        
+                    <h1 id="profile-name" class="profile__name">Paul Ibeabuchi</h1>
+                    <p class="username profile__username">NARUDESIGNS</p>                        
                 </div>
-                <span class="profile-photo__status"> <p>Hi</p> </span>
-                <p class="profile__desc">Frontend Developer | UI Designer | Graphics Designer. Javascript Lover 😎</p>
+                <span id="profile-photo-status" class="status profile-photo__status"> <p>Oh my goodness! this rocks!</p> </span>
+                <p id="profile-bio" class="profile__desc">Frontend Developer | UI Designer | Graphics Designer. Javascript Lover 😎</p>
                 <button class="edit-profile-btn">Edit Profile</button>
 
                 <section class="other-profile-info">
                     <span class="followers">
                         <span class="iconify" data-icon="octicon:people-16" data-inline="false"></span>
-                        <span class="followers-count">5</span> followers <span class="dot-separator">.</span> </span>
+                        <span id="followers-count" class="followers-count">5</span> followers <span class="dot-separator">.</span> </span>
                     </span>
 
                     <span class="following">
-                        <span class="following-count">125</span> following <span class="dot-separator">.</span>
+                        <span id="followeing-count" class="following-count">125</span> following <span class="dot-separator">.</span>
                     </span>
                     
                     <span class="total-stars">
                         <span class="iconify" data-icon="octicon:star-16" data-inline="false"></span>
-                        <span class="total-star-count">20</span>
+                        <span id="total-star-count" class="total-star-count">20</span>
                     </span>
                 </section>
                 <section class="website-link">
                     <span class="iconify" data-icon="octicon:link-16" data-inline="false"></span>
-                    <a href="#web-link">https://narudesigns.netlify.app</a>
+                    <a id="website-link" href="#web-link">https://narudesigns.netlify.app</a>
                 </section>
 
                 <section class="twitter-link">
                     <span class="iconify" data-icon="bytesize:twitter" data-inline="false"></span>
-                    <span>@paulister007</span>
+                    <span id="twitter-link">@paulister007</span>
                 </section>
             </div>
 
