added total repo count

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <li class="main-nav-items active">
                     <span class="main-nav-items__repos iconify" data-icon="octicon:repo-16" data-inline="false"></span>
                     <p>Repositories</p>
-                    <p class="main-nav-items__no-of-repos">21</p>
+                    <p id="no-of-repos"class="main-nav-items__no-of-repos">21</p>
                 </li>
 
                 <li class="main-nav-items">
