--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#24292E">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="app.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
