replace hardcoded text holders

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li class="nav-items__settings">Settings</li> <hr>
                 <li class="main-nav-user mobile-nav-user">
                     <img class="avatar" src="images/naru.jpeg" alt="user-avatar">
-                    <p class="username"><strong>NARUDESIGNS</strong></p> 
+                    <p class="username"><strong>USERNAME</strong></p> 
                 </li> <hr>
                 <li class="nav-items__settings">
                     <span class="iconify logout-icon" data-icon="octicon:sign-out-16" data-inline="false"></span>
@@ -108,7 +108,7 @@
             <!-- Fading user avatar | username -->
             <div id="main-nav-avatar" class="fade-in main-nav-user">
                 <img class="avatar" src="images/naru.jpeg" alt="user-avatar">
-                <p class="username"><strong>NARUDESIGNS</strong></p>
+                <p class="username"><strong>USERNAME</strong></p>
             </div>
             
             <ul class="main-nav__items-container">
@@ -144,10 +144,10 @@
                     <div class="tooltip"> Change your avatar <i class="tooltip-caret fa fa-caret-up"></i></div>
                 </div>
                 <div class="profile-info">
-                    <h1 id="profile-name" class="profile__name">Paul Ibeabuchi</h1>
-                    <p class="username profile__username">NARUDESIGNS</p>                        
+                    <h1 id="profile-name" class="profile__name">FULL NAME</h1>
+                    <p class="username profile__username">USERNAME</p>                        
                 </div>
-                <span id="profile-photo-status" class="status profile-photo__status">Set status</span>
+                <span id="profile-photo-status" class="status profile-photo__status">X</span>
                 <p id="profile-bio" class="profile__desc">Frontend Developer | UI Designer | Graphics Designer. Javascript Lover 😎</p>
                 <button class="edit-profile-btn">Edit Profile</button>
 
@@ -173,7 +173,7 @@
 
                 <section class="twitter-link">
                     <span class="iconify" data-icon="bytesize:twitter" data-inline="false"></span>
-                    <span id="twitter-username">@paulister007</span>
+                    <span id="twitter-username">@username</span>
                 </section>
             </div>
 
