added Codespaces list based on new update in GitHub nav items

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li class="nav-items__pull-requests">Pull requests</li>
                     <li class="nav-items__pulls">Pulls</li>
                     <li class="nav-items__issues">Issues</li>
+                    <li class="nav-items__issues">Codespaces</li>
                     <li class="nav-items__marketplace">Marketplace</li>
                     <li class="nav-items__explore">Explore</li>
                 </ul>                
